Adapt canvas position at smaller resolutions

--- a/index.html
+++ b/index.html
@@ -52,9 +52,14 @@
         position: relative;
         width: 450px;
         height: 100%;
-        top: 10%;
+        top: 30%;
         left: 10%;
         z-index: 0;
+      }
+      @media only screen and (max-width: 768) {
+        .container .canvas-container {
+          top: 10%;
+        }
       }
       footer {
         position: fixed;
